// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
}

.c2 {
  display: block;
  width: auto;
  height: 3rem;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5e6062;
  padding: 1rem 0;
}

.c3:hover {
  color: #424242;
}

.c3:hover,
.c3:active,
.c3:focus {
  padding-bottom: 0.6rem;
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  z-index: 5;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media screen and (max-width:75em) {
  .c1 {
    height: 3.6rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    font-size: 1.4rem;
    font-weight: normal;
    padding: 0.7rem 0;
  }

  .c3:hover,
  .c3:active,
  .c3:focus {
    padding-bottom: 0.3rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
      data-testid="navbar"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          role="img"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c15 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c39 {
  overflow: visible;
}

.c39 .os-figure,
.c39 .os-figure:last-child {
  margin-bottom: 5px;
}

.c39 * {
  overflow: initial;
}

.c26 {
  position: relative;
  overflow: visible;
  min-height: 100%;
  width: 100%;
  padding: 0 3.2rem;
}

.c49 {
  height: 1.5rem;
  width: 1.5rem;
}

.c51 {
  height: 1.5rem;
  width: 1.5rem;
}

.c47 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
  font-weight: 500;
  list-style: none;
}

.c47 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c47 a:hover {
  color: #0064A0;
}

.c47::-webkit-details-marker {
  display: none;
}

.c47,
.c47 span {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c47 a,
.c47 span a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c47 a:hover,
.c47 span a:hover {
  color: #0064A0;
}

.c47:hover,
.c47 span:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c52 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
}

.c52 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c52 a:hover {
  color: #0064A0;
}

.c52 blockquote {
  margin-left: 0;
}

.c45 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  box-shadow: 0 -1rem 1rem -1rem rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
  min-height: 6rem;
  padding: 0 3.2rem;
  padding-top: 1.8rem;
}

.c45 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c45 a:hover {
  color: #0064A0;
}

.c45 > .c46 {
  margin-bottom: 1.8rem;
}

.c45[open] .c48 {
  display: none;
}

.c45:not([open]) .c50 {
  display: none;
}

.c45 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c4 {
  margin-top: -0.25rem;
  margin-left: -0.8rem;
  height: 3rem;
  width: 3rem;
  color: #fff;
}

.c2 {
  width: 100%;
  max-width: 117rem;
  margin: 0 auto;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  height: 2.5rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: inline-block;
  height: 2.5rem;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  width: 27rem;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 2.4rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1.5rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: bold;
  display: block;
  margin: 1rem 0 0 0;
}

.c9 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  max-width: 87rem;
  padding: 0;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: bold;
  display: inline-block;
  margin: 1rem 0 0 0;
}

.c1 {
  top: 0;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 13rem;
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
  position: relative;
  z-index: 4;
  overflow: hidden;
  background: linear-gradient(to right,#002468,#004aa2);
}

.c7 {
  top: 0;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 7rem;
  -webkit-transition: -webkit-transform 200ms;
  -webkit-transition: transform 200ms;
  transition: transform 200ms;
  position: -webkit-sticky;
  position: sticky;
  z-index: 3;
  overflow: hidden;
  background: linear-gradient(to right,#002468,#004aa2);
  margin-top: -7rem;
}

.c42 {
  height: 2.5rem;
  width: 2.5rem;
}

.c44 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c40 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  max-width: 57rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 4rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c40 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c40 a:hover {
  color: #0064A0;
}

.c40 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c21 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
}

.c24 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
}

.c11 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  position: relative;
  color: #5e6062;
}

.c20::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: solid 0.1rem #5e6062;
}

.c22 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c22::-webkit-input-placeholder {
  color: #5e6062;
}

.c22::-moz-placeholder {
  color: #5e6062;
}

.c22:-ms-input-placeholder {
  color: #5e6062;
}

.c22::placeholder {
  color: #5e6062;
}

.c23 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
}

.c23:hover {
  color: #424242;
}

.c25 {
  font-weight: 700;
  font-family: Neue Helvetica W01;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 0;
}

.c19 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  position: -webkit-sticky;
  position: sticky;
  top: 7rem;
  width: 100%;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  display: block;
  z-index: 2;
  background-color: #fff;
}

.c14 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
}

.c17 {
  font-family: Neue Helvetica W01;
  font-weight: 700;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 0;
  padding: 0;
}

.c13 {
  color: #5e6062;
  border: none;
  padding: 0;
  margin: 0;
  overflow: visible;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c13:hover {
  color: #424242;
}

.c12 {
  display: none;
}

.c28 {
  position: -webkit-sticky;
  position: sticky;
  top: 7rem;
  margin-top: -5rem;
  overflow-y: auto;
  height: calc(100vh - 12rem);
  -webkit-transition: -webkit-transform 300ms ease-in-out,box-shadow 300ms ease-in-out,background-color 300ms ease-in-out;
  -webkit-transition: transform 300ms ease-in-out,box-shadow 300ms ease-in-out,background-color 300ms ease-in-out;
  transition: transform 300ms ease-in-out,box-shadow 300ms ease-in-out,background-color 300ms ease-in-out;
  background-color: #fafafa;
  z-index: 3;
  margin-left: -50vw;
  padding-left: 50vw;
  width: calc(50vw + 33.5rem);
  min-width: calc(50vw + 33.5rem);
  box-shadow: 0.2rem 0 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c28 ol {
  padding-inline-start: 10px;
}

.c28 > nav {
  -webkit-overflow-scrolling: touch;
  position: relative;
  padding: 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c28 > nav::before {
  content: "";
  background: #fafafa;
  display: block;
  height: 1rem;
  margin: -1rem -1rem 0 -1rem;
}

.c28 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  overflow: visible;
  box-shadow: 0 1rem 1rem -1rem rgba(0,0,0,0.14);
}

.c32 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
  margin-right: 0;
  padding-right: 0;
  color: #818181;
}

.c32:hover {
  color: #5e6062;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c31 .c16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c31 .c29 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c33 {
  list-style: none;
  font-size: 1.4rem;
}

.c34 {
  list-style: none;
  font-size: 1.4rem;
  overflow: visible;
  position: relative;
}

.c34:before {
  font-weight: bold;
  content: '>';
  position: absolute;
  right: 100%;
}

.c27 {
  overflow: visible;
  margin: 0 auto;
  max-width: 117rem;
}

@media screen {
  .c39 {
    font-family: Neue Helvetica W01;
    color: #424242;
    font-size: 1.6rem;
    line-height: 2.5rem;
    max-width: 57rem;
    margin: 0 auto;
    margin-top: 3.2rem;
  }

  .c39 a {
    color: #027EB5;
    cursor: pointer;
    -webkit-text-decoration: none;
    text-decoration: none;
    border-bottom: #027EB5 solid 0.02em;
  }

  .c39 a:hover {
    color: #0064A0;
  }
}

@media screen and (max-width:75em) {
  .c26 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c45 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c45 {
    min-height: 4rem;
    padding-top: 0.8rem;
  }

  .c45 > .c46 {
    margin-bottom: 0.8rem;
  }
}

@media print {
  .c45 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c8 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c8 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c6 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c6 {
    white-space: normal;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    max-height: 4rem;
    margin-top: 0.3rem;
  }
}

@media screen and (max-width:75em) {
  .c9 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c9 {
    white-space: normal;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    max-height: 4rem;
    margin-top: 0.3rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    padding: 1.6rem;
    height: 10.4rem;
  }
}

@media print {
  .c7 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c7 {
    padding: 1.6rem;
    height: 6rem;
    margin-top: -6rem;
  }
}

@media screen {
  .c35 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    width: 100%;
    overflow: visible;
    -webkit-transition: margin-left 300ms;
    transition: margin-left 300ms;
  }

  .c35 *:target::before {
    content: " ";
    display: block;
    position: relative;
    margin-top: -12rem;
    height: 12rem;
    visibility: hidden;
  }
}

@media screen and (max-width:75em) {
  .c41 {
    margin-left: -0.8rem;
  }
}

@media screen and (max-width:75em) {
  .c43 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c40 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c40 {
    margin: 3.5rem auto 3.7rem auto;
    border: 0;
  }
}

@media screen and (max-width:75em) {
  .c11 {
    height: 4rem;
  }
}

@media screen and (max-width:75em) {
  .c20 {
    border: none;
    margin-right: 1rem;
  }

  .c20:after {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c22 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c25 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c10 {
    top: 6rem;
    padding: 0 1.6rem;
  }
}

@media print {
  .c10 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (max-width:75em) {
  .c18 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c28 {
    width: calc(50vw + 28.8rem);
    min-width: calc(50vw + 28.8rem);
    margin-top: -4rem;
    top: 6rem;
    height: calc(100vh - 9.6rem);
  }
}

@media screen and (max-width:75em) {
  .c28 {
    overflow-y: hidden;
    -webkit-transform: translateX(-33.5rem);
    -ms-transform: translateX(-33.5rem);
    transform: translateX(-33.5rem);
    box-shadow: none;
    background-color: transparent;
  }

  .c28 > * {
    visibility: hidden;
    opacity: 0;
  }
}

@media print {
  .c28 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c30 {
    height: 4rem;
  }
}

@media screen {
  .c0 {
    overflow: visible;
    background-color: #fafafa;
    width: 100%;
    min-height: 100%;
  }
}

@media screen {
  .c27 {
    min-height: 100%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen {
  .c36 {
    min-height: 100%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-right: -3.2rem;
  }
}

@media screen {
  .c37 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    overflow: visible;
    background-color: #fff;
    -webkit-transition: max-width 300ms;
    transition: max-width 300ms;
    width: 100%;
    max-width: 83.5rem;
  }
}

@media screen {
  .c38 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding: 0 3.2rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <a
          className="c3"
          href="/details/books/book-slug-1"
        >
          <svg
            aria-hidden="true"
            className="c4 c5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            />
          </svg>
          Test Book 1
        </a>
        <h1
          className="c6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span class=\\"os-text\\">Test Page 4</span>",
            }
          }
          theme="blue"
        />
      </div>
    </div>
    <div
      className="c7"
    >
      <div
        className="c2"
      >
        <a
          className="c8"
          href="/details/books/book-slug-1"
        >
          <svg
            aria-hidden="true"
            className="c4 c5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            />
          </svg>
          Test Book 1
        </a>
        <span
          className="c9"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span class=\\"os-text\\">Test Page 4</span>",
            }
          }
          theme="blue"
          variant="mini"
        />
      </div>
    </div>
    <div
      className="c10"
    >
      <div
        className="c11"
        data-testid="toolbar"
      >
        <button
          aria-label="Click to open the Table of Contents"
          className="c12 c13"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c14 c15"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <span
            className="c16 c17"
          >
            Table of contents
          </span>
        </button>
        <button
          aria-label="Click to close the Table of Contents"
          className="c18 c13"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c14 c15"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <span
            className="c16 c17"
          >
            Table of contents
          </span>
        </button>
        <div
          className="c19"
        >
          <div
            className="c20"
          >
            <svg
              aria-hidden="true"
              className="c21 c15"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                fill="currentColor"
              />
            </svg>
            <input
              aria-label="Search this book"
              className="c22"
              placeholder="Search this book"
            />
          </div>
          <div
            className="c23"
          >
            <svg
              aria-hidden="true"
              className="c24 c15"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
                fill="currentColor"
              />
            </svg>
            <span
              className="c25"
            >
              Print options
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c26"
    >
      <div
        className="c27"
      >
        <div
          aria-label="Table of Contents"
          className="c28"
        >
          <div
            className="c29 c30"
            data-testid="tocheader"
          >
            <button
              aria-label="Click to close the Table of Contents"
              className="c31 c18 c13"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="c14 c15"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="c16 c17"
              >
                Table of contents
              </span>
              <svg
                aria-hidden="true"
                className="c32"
                focusable="false"
                height="15px"
                version="1.1"
                viewBox="0 0 15 15"
                width="15px"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  id="Symbols"
                  stroke="none"
                  strokeWidth="1"
                >
                  <g
                    fill="currentColor"
                    id="ToC-Panel"
                    transform="translate(-302.000000, -18.000000)"
                  >
                    <g
                      id="X"
                      transform="translate(302.000000, 18.000000)"
                    >
                      <path
                        d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                        id="Combined-Shape"
                      />
                    </g>
                  </g>
                </g>
              </svg>
            </button>
          </div>
          <nav>
            <ol>
              <li
                className="c33"
              >
                <a
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 1</span>",
                    }
                  }
                  href="test-page-1"
                  onClick={[Function]}
                />
              </li>
              <li
                className="c33"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c33"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 2</span>",
                          }
                        }
                        href="1-test-page-2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c33"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c33"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 3</span>",
                          }
                        }
                        href="1-test-page-3"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c33"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      aria-label="Current Page"
                      className="c34"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
                          }
                        }
                        href="1-test-page-4"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c33"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c33"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 5</span>",
                          }
                        }
                        href="1-test-page-5"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c33"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c33"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 6</span>",
                          }
                        }
                        href="1-test-page-6"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c33"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c33"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                          }
                        }
                        href="1-test-page-7"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
        <div
          className="c35"
        >
          <div
            className="c36"
          >
            <div
              className="c37"
            >
              <div
                className="c38"
              >
                <div
                  className="c39 "
                  id="main-content"
                  tabIndex={-1}
                >
                  <div
                    data-type="chapter"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<div xmlns:m=\\"http://www.w3.org/1998/Math/MathML\\" xmlns:ns2=\\"urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0\\" class=\\"introduction\\" data-cnxml-to-html-ver=\\"1.3.2\\" data-type=\\"page\\" id=\\"1d1fd537-77fb-4eac-8a8a-60bbaa747b6d\\">this is a test page</div>",
                        }
                      }
                      data-type="page"
                    />
                  </div>
                </div>
                <div
                  className="c40"
                >
                  <a
                    aria-label="Previous Page"
                    className="c41"
                    href="1-test-page-3"
                    onClick={[Function]}
                    side="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="c42 c5"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
                      />
                    </svg>
                    Previous
                  </a>
                  <a
                    aria-label="Next Page"
                    className="c43"
                    href="1-test-page-5"
                    onClick={[Function]}
                    side="right"
                  >
                    Next
                    <svg
                      aria-hidden="true"
                      className="c44 c5"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
                      />
                    </svg>
                  </a>
                </div>
              </div>
              <details
                className="c45"
              >
                <summary
                  className="c46 c47"
                >
                  <svg
                    aria-hidden="true"
                    className="c48 c49 c15"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 192 512"
                  >
                    <path
                      d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    className="c50 c51 c15"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Citation/Attribution
                  </span>
                </summary>
                <div
                  className="c52"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "
<p>
  Want to cite, share, or modify this book? This book is Sweet License
  1.0 and you must attribute OpenStax.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-test-page-2
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/book-slug-1/pages/1-test-page-2\\">https://openstax.org/books/book-slug-1/pages/1-test-page-2</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/1-test-page-2\\">https://openstax.org/books/book-slug-1/pages/1-test-page-2</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/doesnotmatter\\">https://openstax.org/books/book-slug-1/pages/doesnotmatter</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 OpenStax. Textbook content produced by OpenStax is licensed under a
  Sweet License 1.0 license. <strong>The OpenStax logo, OpenStax book
  covers, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
                    }
                  }
                />
              </details>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
}

.c2 {
  display: block;
  width: auto;
  height: 3rem;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  padding: 1rem 0 1rem 0;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5e6062;
  padding: 1rem 0;
}

.c3:hover {
  color: #424242;
}

.c3:hover,
.c3:active,
.c3:focus {
  padding-bottom: 0.6rem;
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  z-index: 5;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media screen and (max-width:75em) {
  .c1 {
    height: 3.6rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    font-size: 1.4rem;
    font-weight: normal;
    padding: 0.7rem 0;
  }

  .c3:hover,
  .c3:active,
  .c3:focus {
    padding-bottom: 0.3rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
      data-testid="navbar"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          role="img"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c32 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c6 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c28 {
  overflow: visible;
}

.c28 .os-figure,
.c28 .os-figure:last-child {
  margin-bottom: 5px;
}

.c28 * {
  overflow: initial;
}

.c17 {
  position: relative;
  overflow: visible;
  min-height: 100%;
  width: 100%;
  padding: 0 3.2rem;
}

.c39 {
  height: 1.5rem;
  width: 1.5rem;
}

.c41 {
  height: 1.5rem;
  width: 1.5rem;
}

.c37 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  max-width: 57rem;
  margin: 0 auto;
  font-weight: 500;
  list-style: none;
}

.c37 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c37 a:hover {
  color: #0064A0;
}

.c37::-webkit-details-marker {
  display: none;
}

.c37,
.c37 span {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c37 a,
.c37 span a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c37 a:hover,
.c37 span a:hover {
  color: #0064A0;
}

.c37:hover,
.c37 span:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0064A0;
}

.c35 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  box-shadow: 0 -1rem 1rem -1rem rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
  min-height: 6rem;
  padding: 0 3.2rem;
  padding-top: 1.8rem;
}

.c35 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c35 a:hover {
  color: #0064A0;
}

.c35 > .c36 {
  margin-bottom: 1.8rem;
}

.c35[open] .c38 {
  display: none;
}

.c35:not([open]) .c40 {
  display: none;
}

.c35 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c31 {
  height: 2.5rem;
  width: 2.5rem;
}

.c34 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c29 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  max-width: 57rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 4rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c29 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: #027EB5 solid 0.02em;
}

.c29 a:hover {
  color: #0064A0;
}

.c29 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
}

.c15 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
}

.c2 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  position: relative;
  color: #5e6062;
}

.c11::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: solid 0.1rem #5e6062;
}

.c13 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c13::-webkit-input-placeholder {
  color: #5e6062;
}

.c13::-moz-placeholder {
  color: #5e6062;
}

.c13:-ms-input-placeholder {
  color: #5e6062;
}

.c13::placeholder {
  color: #5e6062;
}

.c14 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5e6062;
}

.c14:hover {
  color: #424242;
}

.c16 {
  font-weight: 700;
  font-family: Neue Helvetica W01;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 0;
}

.c10 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 7rem;
  width: 100%;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  display: block;
  z-index: 2;
  background-color: #fff;
}

.c5 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
}

.c8 {
  font-family: Neue Helvetica W01;
  font-weight: 700;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 0;
  padding: 0;
}

.c4 {
  color: #5e6062;
  border: none;
  padding: 0;
  margin: 0;
  overflow: visible;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c4:hover {
  color: #424242;
}

.c3 {
  display: none;
}

.c19 {
  position: -webkit-sticky;
  position: sticky;
  top: 7rem;
  margin-top: -5rem;
  overflow-y: auto;
  height: calc(100vh - 12rem);
  -webkit-transition: -webkit-transform 300ms ease-in-out,box-shadow 300ms ease-in-out,background-color 300ms ease-in-out;
  -webkit-transition: transform 300ms ease-in-out,box-shadow 300ms ease-in-out,background-color 300ms ease-in-out;
  transition: transform 300ms ease-in-out,box-shadow 300ms ease-in-out,background-color 300ms ease-in-out;
  background-color: #fafafa;
  z-index: 3;
  margin-left: -50vw;
  padding-left: 50vw;
  width: calc(50vw + 33.5rem);
  min-width: calc(50vw + 33.5rem);
  box-shadow: 0.2rem 0 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c19 ol {
  padding-inline-start: 10px;
}

.c19 > nav {
  -webkit-overflow-scrolling: touch;
  position: relative;
  padding: 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c19 > nav::before {
  content: "";
  background: #fafafa;
  display: block;
  height: 1rem;
  margin: -1rem -1rem 0 -1rem;
}

.c19 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  overflow: visible;
  box-shadow: 0 1rem 1rem -1rem rgba(0,0,0,0.14);
}

.c23 {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0.4rem;
  margin-right: 0.5rem;
  margin-right: 0;
  padding-right: 0;
  color: #818181;
}

.c23:hover {
  color: #5e6062;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c22 .c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c22 .c20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c18 {
  overflow: visible;
  margin: 0 auto;
  max-width: 117rem;
}

@media screen {
  .c28 {
    font-family: Neue Helvetica W01;
    color: #424242;
    font-size: 1.6rem;
    line-height: 2.5rem;
    max-width: 57rem;
    margin: 0 auto;
    margin-top: 3.2rem;
  }

  .c28 a {
    color: #027EB5;
    cursor: pointer;
    -webkit-text-decoration: none;
    text-decoration: none;
    border-bottom: #027EB5 solid 0.02em;
  }

  .c28 a:hover {
    color: #0064A0;
  }
}

@media screen and (max-width:75em) {
  .c17 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c35 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c35 {
    min-height: 4rem;
    padding-top: 0.8rem;
  }

  .c35 > .c36 {
    margin-bottom: 0.8rem;
  }
}

@media print {
  .c35 {
    display: none;
  }
}

@media screen {
  .c24 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    width: 100%;
    overflow: visible;
    -webkit-transition: margin-left 300ms;
    transition: margin-left 300ms;
  }

  .c24 *:target::before {
    content: " ";
    display: block;
    position: relative;
    margin-top: -12rem;
    height: 12rem;
    visibility: hidden;
  }
}

@media screen and (max-width:75em) {
  .c30 {
    margin-left: -0.8rem;
  }
}

@media screen and (max-width:75em) {
  .c33 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c29 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c29 {
    margin: 3.5rem auto 3.7rem auto;
    border: 0;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 4rem;
  }
}

@media screen and (max-width:75em) {
  .c11 {
    border: none;
    margin-right: 1rem;
  }

  .c11:after {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c13 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c16 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    top: 6rem;
    padding: 0 1.6rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (max-width:75em) {
  .c9 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c19 {
    width: calc(50vw + 28.8rem);
    min-width: calc(50vw + 28.8rem);
    margin-top: -4rem;
    top: 6rem;
    height: calc(100vh - 9.6rem);
  }
}

@media screen and (max-width:75em) {
  .c19 {
    overflow-y: hidden;
    -webkit-transform: translateX(-33.5rem);
    -ms-transform: translateX(-33.5rem);
    transform: translateX(-33.5rem);
    box-shadow: none;
    background-color: transparent;
  }

  .c19 > * {
    visibility: hidden;
    opacity: 0;
  }
}

@media print {
  .c19 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c21 {
    height: 4rem;
  }
}

@media screen {
  .c0 {
    overflow: visible;
    background-color: #fafafa;
    width: 100%;
    min-height: 100%;
  }
}

@media screen {
  .c18 {
    min-height: 100%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen {
  .c25 {
    min-height: 100%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-right: -3.2rem;
  }
}

@media screen {
  .c26 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    overflow: visible;
    background-color: #fff;
    -webkit-transition: max-width 300ms;
    transition: max-width 300ms;
    width: 100%;
    max-width: 83.5rem;
  }
}

@media screen {
  .c27 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding: 0 3.2rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        data-testid="toolbar"
      >
        <button
          aria-label="Click to open the Table of Contents"
          className="c3 c4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c5 c6"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <span
            className="c7 c8"
          >
            Table of contents
          </span>
        </button>
        <button
          aria-label="Click to close the Table of Contents"
          className="c9 c4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="c5 c6"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              fill="currentColor"
            />
          </svg>
          <span
            className="c7 c8"
          >
            Table of contents
          </span>
        </button>
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <svg
              aria-hidden="true"
              className="c12 c6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                fill="currentColor"
              />
            </svg>
            <input
              aria-label="Search this book"
              className="c13"
              placeholder="Search this book"
            />
          </div>
          <div
            className="c14"
          >
            <svg
              aria-hidden="true"
              className="c15 c6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 512 512"
            >
              <path
                d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
                fill="currentColor"
              />
            </svg>
            <span
              className="c16"
            >
              Print options
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c17"
    >
      <div
        className="c18"
      >
        <div
          aria-label="Table of Contents"
          className="c19"
        >
          <div
            className="c20 c21"
            data-testid="tocheader"
          >
            <button
              aria-label="Click to close the Table of Contents"
              className="c22 c9 c4"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="c5 c6"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="c7 c8"
              >
                Table of contents
              </span>
              <svg
                aria-hidden="true"
                className="c23"
                focusable="false"
                height="15px"
                version="1.1"
                viewBox="0 0 15 15"
                width="15px"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  id="Symbols"
                  stroke="none"
                  strokeWidth="1"
                >
                  <g
                    fill="currentColor"
                    id="ToC-Panel"
                    transform="translate(-302.000000, -18.000000)"
                  >
                    <g
                      id="X"
                      transform="translate(302.000000, 18.000000)"
                    >
                      <path
                        d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                        id="Combined-Shape"
                      />
                    </g>
                  </g>
                </g>
              </svg>
            </button>
          </div>
        </div>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <div
              className="c26"
            >
              <div
                className="c27"
              >
                <div
                  className="c28 "
                  id="main-content"
                  tabIndex={-1}
                >
                  <div
                    data-type="chapter"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "",
                        }
                      }
                      data-type="page"
                    />
                  </div>
                </div>
                <div
                  className="c29"
                >
                  <span
                    aria-hidden={true}
                    aria-label="Previous Page"
                    className="c30"
                    side="left"
                  >
                    <svg
                      aria-hidden="true"
                      className="c31 c32"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
                      />
                    </svg>
                    Previous
                  </span>
                  <span
                    aria-hidden={true}
                    aria-label="Next Page"
                    className="c33"
                    side="right"
                  >
                    Next
                    <svg
                      aria-hidden="true"
                      className="c34 c32"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <details
                className="c35"
              >
                <summary
                  className="c36 c37"
                >
                  <svg
                    aria-hidden="true"
                    className="c38 c39 c6"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 192 512"
                  >
                    <path
                      d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                      fill="currentColor"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    className="c40 c41 c6"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Citation/Attribution
                  </span>
                </summary>
              </details>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
